--- a/settings.json
+++ b/settings.json
@@ -2,6 +2,6 @@
   "apiKey": "185e-c6d9-7d49",
   "ownerName": "denis putra",
   "botName": "Bad Bot",
-  "ownerNumber": "0",
+  "ownerNumber": "6285727091924",
   "sessionName": "./session.json"
 }
