--- a/settings.json
+++ b/settings.json
@@ -1,7 +1,6 @@
 {
-  "apiKey": "185e-c6d9-7d49",
   "ownerName": "denis putra",
   "botName": "Bad Bot",
   "ownerNumber": "6285727091924",
-  "sessionName": "./session.json"
+  "apiKey": "185e-c6d9-7d49"
 }
