--- a/settings.json
+++ b/settings.json
@@ -4,6 +4,6 @@
   "ownerNumber": "6285727091924",
   "apiKey": "185e-c6d9-7d49",
   "autorespon": "true",
-  "autoread": "true",
+  "autoread": "false",
   "autojoin": "true"
 }
