--- a/settings.json
+++ b/settings.json
@@ -3,7 +3,7 @@
   "botName": "Bad Bot",
   "ownerNumber": "6285727091924",
   "apiKey": "185e-c6d9-7d49",
-  "autorespon": "true",
-  "autoread": "false",
-  "autojoin": "true"
+  "autorespon": true,
+  "autoread": false,
+  "autojoin": true
 }
