--- a/settings.json
+++ b/settings.json
@@ -2,8 +2,5 @@
   "ownerName": "denis putra",
   "botName": "Bad Bot",
   "ownerNumber": "6285727091924",
-  "apiKey": "185e-c6d9-7d49",
-  "autorespon": false,
-  "autoread": true,
-  "autojoin": false
+  "apiKey": "185e-c6d9-7d49"
 }
