--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "git remote set-url origin https://github.com/dcode-denpa/bad-bot.git && git pull && npm install pm2 -g && pm2 start index && pm2 save && pm2 dashboard"
+    "start": "git remote set-url origin https://github.com/dcode-denpa/bad-bot.git && git pull && npm install pm2 -g && pm2 start index.js && pm2 save && pm2 dashboard"
   },
   "author": "Denis Putra",
   "license": "ISC",
