--- a/settings.json
+++ b/settings.json
@@ -1,6 +1,6 @@
 {
-  "ownerName": "denis putra",
-  "botName": "Bad Bot",
-  "ownerNumber": "6285866295942",
+  "ownerName": "change here",
+  "botName": "change here",
+  "ownerNumber": "change here",
   "apiKey": "185e-c6d9-7d49"
 }
