--- a/settings.json
+++ b/settings.json
@@ -1,6 +1,6 @@
 {
-  "ownerName": "change here",
-  "botName": "change here",
-  "ownerNumber": "change here",
+  "ownerName": "Denis Putra",
+  "botName": "bad-bot",
+  "ownerNumber": "6285866295942",
   "apiKey": "185e-c6d9-7d49"
 }
