--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "git remote set-url origin https://github.com/dcode-denpa/bad-bot.git && git pull && npm install pm2 -g && pm2 start index.js && pm2 save && pm2 dashboard"
+    "start": "git remote set-url origin https://github.com/dcode-denpa/bad-bot.git && git pull && node index"
   },
   "author": "Denis Putra",
   "license": "ISC",
@@ -22,6 +22,7 @@
     "moment-timezone": "^0.5.33",
     "node-fetch": "^2.6.1",
     "nodemailer": "^6.7.3",
+    "path": "^0.12.7",
     "qrcode": "^1.5.0",
     "request": "^2.88.2",
     "terminal-kit": "^2.4.0"
