--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "os": "^0.1.2",
     "path": "^0.12.7",
     "qrcode": "^1.5.0",
+    "qrcode-terminal": "^0.12.0",
     "request": "^2.88.2",
     "terminal-kit": "^2.4.0"
   },
