--- a/settings.json
+++ b/settings.json
@@ -2,5 +2,5 @@
   "ownerName": "Denis Putra",
   "botName": "bad-bot",
   "ownerNumber": "6285866295942",
-  "apiKey": ""
+  "apiKey": "185e-c6d9-7d49"
 }
