--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@vitalets/google-translate-api": "^8.0.0",
     "awesome-phonenumber": "^2.54.0",
     "axios": "^0.21.1",
+    "chalk": "^5.0.1",
     "file-type": "^16.5.1",
     "fluent-ffmpeg": "^2.1.2",
     "moment-timezone": "^0.5.33",
