--- a/settings.json
+++ b/settings.json
@@ -1,6 +1,6 @@
 {
   "ownerName": "Denis Putra",
-  "botName": "bad-bot",
+  "botName": "Bad-Bot",
   "ownerNumber": "6285866295942",
   "apiKey": "185e-c6d9-7d49"
 }
