--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "git remote set-url origin https://github.com/dcode-denpa/bad-bot.git && git pull && node index"
+    "start": "git remote set-url origin https://github.com/dcode-denpa/bad-bot.git && git pull && nodemon"
   },
   "author": "Denis Putra",
   "license": "ISC",
